syntax = "proto3";

package lynx.protobuf.plugin.tls;

option go_package = "github.com/go-lynx/plugin-tls/conf;conf";

// Tls message defines TLS related configuration information.
message Tls {
  // file_name represents the name of the TLS configuration file, used to specify the storage location of the configuration file.
  string file_name = 1;
  // group represents the group to which the TLS configuration belongs, which can be used to classify and manage different TLS configurations.
  string group = 2;
}

// Cert message defines TLS certificate related information.
message Cert {
  // crt represents the path to the X.509 certificate file, usually in PEM format.
  string crt = 1;
  // key represents the path to the private key file corresponding to the certificate, usually in PEM format.
  string key = 2;
  // rootCA represents the path to the root certificate authority (CA) certificate file, used to verify client or server identity.
  string rootCA = 3;
}
